fixing front page images for more contrast

--- a/tribeca-web/public/stylesheets/Tribeca_blue.css
+++ b/tribeca-web/public/stylesheets/Tribeca_blue.css
@@ -5649,7 +5649,7 @@ body {
 #wrapper {
   background-repeat: no-repeat;
   background-position: center 0;
-  background-image: transparent; }
+  background-image: url("../images/carousel/horizontiltcrop.jpg"); }
   @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
     #wrapper {
       background-image: transparent;
