--- a/tribeca-web/public/stylesheets/custom.css
+++ b/tribeca-web/public/stylesheets/custom.css
@@ -3,7 +3,7 @@
 }
 
 .slider2 {
-  background-image: url("../images/carousel/architect.jpg");
+  background-image: url("../images/carousel/earthspace.jpg");
 }
 
 .slider3 {
